Add denied traffic doc

--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/policy-recommendations.mdx
@@ -76,7 +76,7 @@ You are now ready to observe the allowed traffic of your policy in Service Graph
 
 :::note 
 
-{{prodname}} has an on-the-fly version of policy recommendations called, **Recommend a policy** (on the Policies Board, Edit page). Although similar to policy recommendations (both generate time-stamped policy recommendations), they are different features. To create an on-the-fly policy recommendation, see Recommend a policy](https://docs.tigera.io/calico-enterprise/next/network-policy/generate-policy-recommendation#create-a-policy-recommendation). 
+{{prodname}} has an on-the-fly version of policy recommendations called, **Recommend a policy** (on the Policies Board, Edit page). Although similar to policy recommendations (both generate time-stamped policy recommendations), they are different features. To create an on-the-fly policy recommendation, see Recommend a policy](../policy-impact-preview). 
 
 :::
 
@@ -115,13 +115,18 @@ To verify that you have traffic flows, follow these steps:
    Note: It may take a few minutes for flows to appear in results.
 1. Scroll over to the flow log’s policies field to investigate which policy or policies denied this flow. (For help, see [Flow log types](../../visibility/elastic/flow/datatypes#big-picture).
 
-If you do not have denied traffic, but still want to test policy recommendations, you can create sample pods, namespaces, and denied traffic. For help, see [Create denied traffic flows to get policy recommendations](). 
+If you do not have denied traffic, but still want to test policy recommendations, you can create sample pods, namespaces, and denied traffic. For help, see [Create denied traffic flows to get policy recommendations](../network-policy/denied-traffic-flows). 
 
 ### Change policy recommendations parameters
 
 You can change policy recommendation parameters using the [Policy recommendation resource](../reference/resources/policyrecommendations). For example, you may want to change the interval for which you want flow logs to be processed, or the amount of time you want for a policy to keep processing flows for until it’s considered stable. You can also filter out namespaces. 
 
+### Disable policy recommendations 
+
+There are several reasons why you may want to disable policy recommendations. If you do, activated staged network policies are not affected, including enforced policies. Unactivated policies in the Policies Board are no longer actively updated. 
+
+To disable policy recommendations, set the **RecStatus** parameter to `Disabled` in the [Policy recommendation](../reference/resources/policyrecommendations)resource.
    
 ## Above and beyond
 
-[Policy best practices]()
+[Policy best practices](../network-policy/policy-best-practices)
