--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/denied-traffic-flows.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/denied-traffic-flows.mdx
@@ -6,7 +6,7 @@ description: Create denied traffic flows to test policy recommendations.
 
 ## Big picture
 
-To use the [policy recommendation feature](../policy-recommendations.mdx), you must have traffic between pods in namespaces that are denying traffic. However, you may already have policies in place to allow traffic. If you want to play with policy recommendations, follow these steps to create namespaces and pods with denied traffic. 
+To use the [policy recommendation feature](policy-recommendations.mdx), you must have traffic between pods in namespaces that are denying traffic. However, you may already have policies in place to allow traffic. If you want to play with policy recommendations, follow these steps to create namespaces and pods with denied traffic. 
 
 ### Create namespaces 
 
