--- a/calico-enterprise_versioned_docs/version-3.16/network-policy/denied-traffic-flows.mdx
+++ b/calico-enterprise_versioned_docs/version-3.16/network-policy/denied-traffic-flows.mdx
@@ -73,4 +73,4 @@ You should get a 404 error. This is the expected response because flows are not 
 
 ### Next step
 
-You are now ready to [enable policy recommendations](../policy-recommendations#enable-policy-recommendations) and see flows that can be allowed. 
+You are now ready to [enable policy recommendations](policy-recommendations#enable-policy-recommendations) and see flows that can be allowed. 
