--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/openshift/installation/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/openshift/installation/index.mdx
@@ -33,7 +33,7 @@ The geeky details of what you get:
 1. [Create the cluster](#create-the-cluster)
 1. [Create a storage class](#create-a-storage-class)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
-1. [Secure {{prodname}} components with network policy](#secure-calico-enterprise-components-with-network-policy)
+1. [Install {{prodname}} resources](#install-calico-enterprise-resources)
 
 <InstallOpenShift clusterType='standalone' />
 
