--- a/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
+++ b/calico-enterprise/getting-started/install-on-clusters/openshift/installation.mdx
@@ -24,6 +24,7 @@ This guide augments the applicable steps in the [OpenShift documentation](https:
 1. [Create the cluster](#create-the-cluster)
 1. [Create a storage class](#create-a-storage-class)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
+1. [Install {{prodname}} resources](#install-calico-enterprise-resources)
 
 <InstallOpenShift clusterType='standalone' />
 
