--- a/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/openshift/installation/index.mdx
+++ b/calico-enterprise_versioned_docs/version-3.14/getting-started/install-on-clusters/openshift/installation/index.mdx
@@ -34,6 +34,7 @@ The geeky details of what you get:
 1. [Create a storage class](#create-a-storage-class)
 1. [Install the {{prodname}} license](#install-the-calico-enterprise-license)
 1. [Install {{prodname}} resources](#install-calico-enterprise-resources)
+1. [Secure {{prodname}} components with network policy](#secure-calico-enterprise-components-with-network-policy)
 
 <InstallOpenShift clusterType='standalone' />
 
