--- a/calico-cloud_versioned_docs/version-3.15/release-notes/index.mdx
+++ b/calico-cloud_versioned_docs/version-3.15/release-notes/index.mdx
@@ -4,6 +4,18 @@ description: What's new, and why features provide value for upgrading.
 
 # Release notes
 
+## February 28, 2023
+
+### Updates
+
+- Adds Bottlerocket support for Container Threat Detection.
+- Adds support for scanning multiple images with Image Assurance
+
+### Bug fixes
+
+- Fixes "Kibana" menu item rename to "Logs".
+- Bug fixes for Container Threat Detection alerts.
+
 ## February 7, 2023
 
 ### New and improved Dashboards
@@ -40,21 +52,6 @@ Calico Cloud has also rearchitected egress gateway pods to improve security and 
 * Calico Cloud supports the Image Assurance CLI scanner versions 1.3.0 and later.
 * **Bug fix:** Previously, the scanner returned an error if it reached a size limit while uploading vulnerabilities.
 This size limit has been removed.
-
-
-## December 13, 2022
-
-### Search by CVE in Image Assurance
-
-Image Assurance reporting features now includes a search and filtering capability that allows you to find list items based on a single CVE ID within any Image Assurance reports.
-
-### Enable and Disable Container Threat Detection in the Calico Cloud UI
-
-You can now enable or disable Container Threat Detection within the UI. After enabling the feature, you can review the status of which nodes are being monitored by the feature and which nodes of your cluster are unsupported.
-
-### New Feature: Calico Cloud Service Status Page
-
-All users can view the status and health of the Calico Cloud service on our new status page: [https://status.calicocloud.io](https://status.calicocloud.io/).
 
 ## December 13, 2022
 
