--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -22,8 +22,8 @@ To enable/disable policy recommendation, you must have the **tigera-admin** role
 
 **Recommended**
 Basic knowledge of policies and tiers:
-- [Network policy tutorial]()
-- [Get started with tiered network policy]()
+- [Network policy tutorial](../network-policy/policy-tiers/policy-tutorial-ui)
+- [Get started with tiered network policy](../network-policy/policy-tiers/tiered-policy)
 
 **Limitations**
 
@@ -64,7 +64,7 @@ From the Policy Recommendation board, select a policy recommendation (or bulk se
 
 In the left navbar, click **Policies**.
 
-![Policies board](/img/calico-enterprise/policies-board.png)
+![Policies board](/img/calico-enterprise/policy-recommendations-tier.png)
 
 Policy recommendations are added to the **namespace-segmentation** tier. Note the following:
 
@@ -125,7 +125,7 @@ You can change policy recommendation parameters using the [Policy recommendation
 
 There are several reasons why you may want to disable policy recommendations. If you do, activated staged network policies are not affected, including enforced policies. Unactivated policies in the Policies Board are no longer actively updated. 
 
-To disable policy recommendations, set the **RecStatus** parameter to `Disabled` in the [Policy recommendation](../reference/resources/policyrecommendations)resource.
+To disable policy recommendations, set the **RecStatus** parameter to `Disabled` in the [Policy recommendation](../reference/resources/policyrecommendations) resource.
    
 ## Above and beyond
 
