--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -60,7 +60,7 @@ The **Policy Recommendations** board is automatically displayed.
 
 Policy recommendations are not active until you move them to the **Policies Board. 
 
-From the Policy Recommendation board, select a policy recommendation (or bulk select) and select, Add to policy board.  
+From the Policy Recommendation board, select a policy recommendation (or bulk select) and select, **Add to policy board**.  
 
 In the left navbar, click **Policies**.
 
