--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -27,7 +27,7 @@ Basic knowledge of policies and tiers:
 
 **Limitations**
 
-In this release, managing policy recommendations is available only in Manager UI. `kubectl` commands are available to update Policy Recommendations parameters.
+In this release, managing policy recommendations is available only in Manager UI. `kubectl` commands are available to update Policy Recommendations resource parameters.
 
 ## How to
 
@@ -40,7 +40,7 @@ In this release, managing policy recommendations is available only in Manager UI
 
 ### Enable policy recommendations
 
-1. In the left navbar in Manager UI, click **Policy**, **Recommendations**.
+1. In the left navbar in Manager UI, click **Policies**, **Recommendations**.
 1. On the opt-in page, click **Enable Policy Recommendations**.
 
    ![Enable policy recommendations](/img/calico-enterprise/enable-policy-recommendations.png)
@@ -58,25 +58,25 @@ The **Policy Recommendations** board is automatically displayed.
 
 ### Activate policy recommendations
 
-Policy recommendations are not active until you move them to the **Policies Board. 
+Policy recommendations are not active until you move them to the **Policies Board**. 
 
 From the Policy Recommendation board, select a policy recommendation (or bulk select) and select, **Add to policy board**.  
 
-In the left navbar, click **Policies**.
+In the left navbar, click **Policies**, **Default**.
 
 ![Policies board](/img/calico-enterprise/policy-recommendations-tier.png)
 
 Policy recommendations are added to the **namespace-segmentation** tier. Note the following:
 
-- The `namespace-segmentation` tier name is fixed and cannot be changed
 - Staged network policy recommendations function like any other staged network policies; they are differentiated from regular staged policies by the `recommendation` suffix
 - You can move policy recommendation staged policies to other tiers
+- The `namespace-segmentation` tier name is fixed and cannot be changed
 
 You are now ready to observe the allowed traffic of your policy in Service Graph to see if the policy meets your needs. A best practice is to assess the impact of a policy recommendation before enforcing it. See [Stage, preview impacts, and enforce policy](staged-network-policies.mdx) for help. 
 
 :::note 
 
-{{prodname}} has an on-the-fly version of policy recommendations called, **Recommend a policy** (on the Policies Board, Edit page). Although similar to policy recommendations (both generate time-stamped policy recommendations), they are different features. To create an on-the-fly policy recommendation, see Recommend a policy](../policy-impact-preview). 
+{{prodname}} has an on-the-fly version of policy recommendations called, **Recommend a policy** (**Policies Board**, **Edit**). Although both generate time-stamped policy recommendations, they are different features. To create an on-the-fly policy recommendation, see Recommend a policy](../policy-impact-preview). 
 
 :::
 
@@ -86,11 +86,11 @@ As new namespace and components are added to a cluster, your policy recommendati
 
 **To get a new policy recommendation for an existing staged recommended policy**:
 
-1. On the Policies Recommendations page, click the **Active tab** which lists the active staged network policies. 
+1. On the **Policies Recommendations** board, click the **Active tab**, which lists the active staged network policies. 
 1. Select the Actions drop-down associated with the policy in question, and click **Dismiss policy**. 
 1. Click the **Dismissed tab**, select the Actions drop-down, and Reactivate the policy.
 
-**To get a new policy recommendation for an existing enforced policy recommendation**, delete or rename the policy so a new staged network policy is recreated in the Policy Recommendations page. 
+**To get a new policy recommendation for an existing enforced policy recommendation**, delete or rename the policy so a new staged network policy is recreated on the Policy Recommendations board. 
 
 ## Troubleshoot policy recommendations
 
@@ -109,23 +109,21 @@ To view error logs in Kibana, go to **Logs**, and access the `tigera-policy-reco
 
 To verify that you have traffic flows, follow these steps:
 
-1. In the left navbar, go to **Service Graph**, **Default**.
-1. On the left, click the chevron to open **Namespaces**.
-1. Search for a namespace. 
-   Note: It may take a few minutes for flows to appear in results.
-1. Scroll over to the flow log’s policies field to investigate which policy or policies denied this flow. (For help, see [Flow log types](../../visibility/elastic/flow/datatypes#big-picture).
+1. Go to **Service Graph**, **Default**.
+1. Filter flow logs for your namespace.
+1. In the Actions menu, you should see **Denied** flows.
 
 If you do not have denied traffic, but still want to test policy recommendations, you can create sample pods, namespaces, and denied traffic. For help, see [Create denied traffic flows to get policy recommendations](../network-policy/denied-traffic-flows). 
 
 ### Change policy recommendations parameters
 
-You can change policy recommendation parameters using the [Policy recommendation resource](../reference/resources/policyrecommendations). For example, you may want to change the interval for which you want flow logs to be processed, or the amount of time you want for a policy to keep processing flows for until it’s considered stable. You can also filter out namespaces. 
+You can change policy recommendation parameters using the [Policy recommendations resource](../reference/resources/policyrecommendations). For example, you may want to change the interval for flow logs to be processed, or the time for a policy to keep processing flows for until it’s considered stable. You can also filter out namespaces. 
 
 ### Disable policy recommendations 
 
-There are several reasons why you may want to disable policy recommendations. If you do, activated staged network policies are not affected, including enforced policies. Unactivated policies in the Policies Board are no longer actively updated. 
-
 To disable policy recommendations, set the **RecStatus** parameter to `Disabled` in the [Policy recommendation](../reference/resources/policyrecommendations) resource.
+
+Note that activated staged network policies are not affected by disabling policy recommendations, including enforced policies. Unactivated policy recommendations in the Policies Recommendations are no longer actively updated. 
    
 ## Above and beyond
 
