--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -68,7 +68,7 @@ In the left navbar, click **Policies**, **Default**.
 
 Policy recommendations are added to the **namespace-segmentation** tier. Note the following:
 
-- Staged network policy recommendations function like any other staged network policies; they are differentiated from regular staged policies by the `recommendation` suffix
+- Staged network policy recommendations work like any other staged network policies; they are differentiated from regular staged policies by the `recommendation` suffix
 - You can move policy recommendation staged policies to other tiers
 - The `namespace-segmentation` tier name is fixed and cannot be changed
 
