--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -82,17 +82,21 @@ You are now ready to observe the allowed traffic of your policy in Service Graph
 
 ### Manage policy recommendations
 
-As new namespace and components are added to a cluster, your policy recommendation won’t allow traffic to them. If a policy recommendation has not been enforced, you’ll need to update it to allow traffic.
+As new namespace and components are added to a cluster, your policy recommendation won’t allow traffic to them. If a policy recommendation has not been enforced, you’ll need to update it to allow traffic. 
 
-**To get a new policy recommendation for an existing staged recommended policy**:
+To get a new policy recommendation for an existing: 
 
-1. On the **Policies Recommendations** board, click the **Active tab**, which lists the active staged network policies. 
-1. Select the Actions drop-down associated with the policy in question, and click **Dismiss policy**. 
-1. Click the **Dismissed tab**, select the Actions drop-down, and Reactivate the policy.
+- **Staged policy recommendation**
 
-**To get a new policy recommendation for an existing enforced policy recommendation**, delete or rename the policy so a new staged network policy is recreated on the Policy Recommendations board. 
+   1. On the **Policies Recommendations** board, click the **Active tab**, which lists the active staged network policies. 
+   1. Select the Actions drop-down associated with the policy in question, and click **Dismiss policy**. 
+   1. Click the **Dismissed tab**, select the Actions drop-down, and Reactivate the policy.
 
-## Troubleshoot policy recommendations
+- **Enforced policy recommendation**
+
+   Delete or rename the policy so a new staged network policy is recreated on the Policy Recommendations board. 
+
+### Troubleshoot policy recommendations
 
 To view error logs in Kibana, go to **Logs**, and access the `tigera-policy-recommendation` namespace.
 
@@ -121,9 +125,9 @@ You can change policy recommendation parameters using the [Policy recommendation
 
 ### Disable policy recommendations 
 
-To disable policy recommendations, set the **RecStatus** parameter to `Disabled` in the [Policy recommendation](../reference/resources/policyrecommendations) resource.
+To disable policy recommendations, set the **RecStatus** parameter to `Disabled` in the [Policy recommendations resource](../reference/resources/policyrecommendations) resource.
 
-Note that activated staged network policies are not affected by disabling policy recommendations, including enforced policies. Unactivated policy recommendations in the Policies Recommendations are no longer actively updated. 
+Note that unactivated policy recommendations in the Policies Recommendations board are no longer updated. Existing activated and enforced staged network and policies are not affected by disabling policy recommendations. 
    
 ## Above and beyond
 
