--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -121,7 +121,9 @@ If you do not have denied traffic, but still want to test policy recommendations
 
 ### Change policy recommendations parameters
 
-You can change policy recommendation parameters using the [Policy recommendations resource](../reference/resources/stagednetworkpolicy). For example, you may want to change the interval for flow logs to be processed, or the time for a policy to keep processing flows for until it’s considered stable. You can also filter out namespaces. 
+You can change how often policy recommendations are processed in the Manager UI. On the Policy Recommendation board, click `Global Settings` button. 
+
+All other policy recommendations require Admin permissions and can be changed using the [Policy recommendations resource](../reference/resources/stagednetworkpolicy). 
 
 ### Disable policy recommendations 
 
