--- a/calico-enterprise/network-policy/policy-recommendations.mdx
+++ b/calico-enterprise/network-policy/policy-recommendations.mdx
@@ -121,7 +121,7 @@ If you do not have denied traffic, but still want to test policy recommendations
 
 ### Change policy recommendations parameters
 
-You can change how often policy recommendations are processed in the Manager UI. On the Policy Recommendation board, click `Global Settings` button. 
+You can change how often policy recommendations are processed in the Manager UI. On the Policy Recommendation board, click the `Global Settings` button. 
 
 All other policy recommendations require Admin permissions and can be changed using the [Policy recommendations resource](../reference/resources/stagednetworkpolicy). 
 
