--- a/calico-enterprise/network-policy/application-layer-policies/alp.mdx
+++ b/calico-enterprise/network-policy/application-layer-policies/alp.mdx
@@ -20,6 +20,7 @@ Application layer policies let you limit access controls based on L7 attributes.
 ## How to
 - [Enable application layer policies](#enable-application-layer-policies)
 - [Enforce application layer policies for ingress traffic](#enforce-application-layer-policies-for-ingress-traffic)
+- [Disable application layer policies](#disable-application-layer-policies)
 
 ### Enable application layer policies (ALP)
 In the ApplicationLayer custom resource, set the `applicationLayerPolicy` field to Enabled.
@@ -33,10 +34,6 @@ spec:
   applicationLayerPolicy: Enabled
   
 ```
-To disable the policy, do one of the following steps:
- - Set the `applicationLayerPolicy` field in the `ApplicationLayer` custom resource to `Disabled`.
- - Remove the `applicationLayerPolicy` field entirely.
- - Delete the ApplicationLayer` custom resource.
 
 ### Enforce application layer policies for ingress traffic
 
@@ -62,3 +59,9 @@ spec:
   egress:
     - action: Allow
 ```
+### Disable application layer policies
+
+To disable the policy, do one of the following steps:
+ - Set the `applicationLayerPolicy` field in the `ApplicationLayer` custom resource to `Disabled`.
+ - Remove the `applicationLayerPolicy` field entirely.
+ - Delete the ApplicationLayer` custom resource.
