--- a/calico-enterprise/network-policy/policy-tiers/tiered-policy.mdx
+++ b/calico-enterprise/network-policy/policy-tiers/tiered-policy.mdx
@@ -66,11 +66,11 @@ The default tier is where:
 
 System tiers are added during installation and are hidden by default.
 
-- **allow-tigera** - a required tier with policies to enable and secure traffic flows for Tigera services and subsystems.
+- **allow-tigera** tier contains policies to secure {{prodname}} components and are controlled by the Tigera Operator. These policies should not be edited, and the tier should not be moved. Inadvertent changes are automatically reverted by the Operator to ensure your cluster is always protected.
 
-:::note
+::: warning
 
-The Tigera Operator manages this tier and reverts any user edits to policy or moving of this tier. This ensures that you do not inadvertently impact the operation of {{prodname}}. However, you can still change how traffic is enforced using policies in adjacent tiers. For details, see [Change allow-tigera tier behavior](allow-tigera.mdx).
+Although it is possible to change the behavior of the `allow-tigera` using adjacent tiers, it is not a trivial task. You can break critical cluster traffic and impact the operation of {{prodname}}. To prevent loss of cluster services, see [Change allow-tigera tier behavior](allow-tigera.mdx), and contact Support for help.
 
 :::
 
