Address comments on docs

--- a/calico-enterprise/networking/egress/egress-gateway-azure.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-azure.mdx
@@ -351,7 +351,7 @@ kubectl patch felixconfiguration default --type='merge' -p \
 
 :::note
 
-`egressIPSupport` must be the same on all cluster nodes, so you should only set them in the `default` FelixConfiguration resource.
+`egressIPSupport` must be the same on all cluster nodes, so you should set them only in the `default` FelixConfiguration resource.
 
 :::
 
