--- a/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-on-prem.mdx
@@ -204,7 +204,7 @@ kubectl patch felixconfiguration.p default --type='merge' -p \
 
 Where:
 
-- `egressIPSupport` must be the same on all cluster nodes, so you should only set them in the
+- `egressIPSupport` must be the same on all cluster nodes, so you should set them only in the
   `default` FelixConfiguration resource.
 
 ### Provision an egress IP pool
