--- a/calico-enterprise/networking/egress/egress-gateway-aws.mdx
+++ b/calico-enterprise/networking/egress/egress-gateway-aws.mdx
@@ -405,7 +405,7 @@ kubectl patch felixconfiguration default --type='merge' -p \
 
 :::note
 
-- `egressIPSupport` must be the same on all cluster nodes, so you should only set them in the
+- `egressIPSupport` must be the same on all cluster nodes, so you should set them only in the
   `default` FelixConfiguration resource.
 
 :::
